MODON MRE BPDEV/force-app/main/default/objects/Automation_Update__c/Automation_Update__c.object-meta.xml
<CustomObject>
    <label>Automation Update</label>
    <nameField>
        <displayFormat>AFU-{0000}</displayFormat>
        <label>Automation Field Update Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Automation Updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>