MODON MRE BPDEV/force-app/main/default/objects/Automation_Update__c/fields/Process_Flow_Step__c.field-meta.xml
<CustomField>
    <fullName>Process_Flow_Step__c</fullName>
    <label>Process Flow Step</label>
    <referenceTo>Process_Flow_Step__c</referenceTo>
    <relationshipName>Automation_Field_Updates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>